Make working burger

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="burger"><i class="fas fa-bars"></i></div>
+        <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
         <nav>
             <ul>
                 <li><a href="">Menu</a></li>
@@ -25,6 +25,7 @@
         <div class="logo">LOGO</div>
     </header>
 
+    <script src="js/burger.js"></script>
 </body>
 
 </html>
