Fix responsiveness problems

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <header>
         <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
         <nav>
-            <ul>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Zdjęcia</a></li>
-                <li><a href="">Kontakt</a></li>
-                <li><a href="">O nas</a></li>
-            </ul>
+            <a href=""><span>Menu</span></a>
+            <a href=""><span>Zdjęcia</span></a>
+            <a href=""><span>Kontakt</span></a>
+            <a href=""><span>O nas</span></a>
         </nav>
         <div class="logo">LOGO</div>
     </header>
