Header and nav for desktop

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
 <body>
     <header>
-        <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
-        <nav>
-            <a href=""><span>Menu</span></a>
-            <a href=""><span>Zdjęcia</span></a>
-            <a href=""><span>Kontakt</span></a>
-            <a href=""><span>O nas</span></a>
-        </nav>
-        <div class="logo">LOGO</div>
+        <div class="wrap">
+            <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
+            <nav>
+                <a href=""><span>Menu</span></a>
+                <a href=""><span>Zdjęcia</span></a>
+                <a href=""><span>Kontakt</span></a>
+                <a href=""><span>O nas</span></a>
+            </nav>
+            <div class="logo">LOGO</div>
+        </div>
     </header>
 
     <script src="js/burger.js"></script>
