Create menu page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="wrap">
             <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
             <nav>
-                <a href=""><span>Menu</span></a>
+                <a href="menu.html"><span>Menu</span></a>
                 <a href=""><span>Zdjęcia</span></a>
                 <a href=""><span>Kontakt</span></a>
                 <a href=""><span>O nas</span></a>
