Add menu options list for mobile (except tablet)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href=""><span>Kontakt</span></a>
                 <a href=""><span>O nas</span></a>
             </nav>
-            <div class="logo"></div>
+            <div class="logo"><a href="index.html"></a></div>
             <img src="images/logo.jpg" alt="">
         </div>
     </header>
