--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,25 @@
     </header>
 
     <div class="wrap-bottom">
-        <h2>Menu</h2>
+        <section class="menu-main">
+            <h2>Menu</h2>
+            <button><span>Przystawki</span><i class="fas fa-chevron-down"></i></button>
+            <div class="menu-options">
+                <ul>
+                    <li>Przystawki</li>
+                    <li>Zupy</li>
+                    <li>Sałatki</li>
+                    <li>Makarony</li>
+                    <li>Dania mięsne</li>
+                    <li>Dania rybne</li>
+                    <li>Desery</li>
+                    <li>Napoje zimne</li>
+                    <li>Napoje gorące</li>
+                    <li>Alkohole</li>
+                </ul>
+            </div>
+        </section>
+
 
 
     </div>
@@ -42,6 +60,7 @@
     </div> -->
 
     <script src="js/burger.js"></script>
+    <script src="js/menu_list.js"></script>
     <!-- <script src="js/contact_padding.js"></script> -->
 </body>
 
