complete menu page

--- a/menu.html
+++ b/menu.html
@@ -28,9 +28,11 @@
         </div>
     </header>
 
+    <div class="banner-menu">
+        <h2>Menu</h2>
+    </div>
     <div class="wrap-bottom">
         <section class="menu-main">
-            <h2>Menu</h2>
             <button><span>Przystawki</span><i class="fas fa-chevron-down"></i></button>
             <div class="menu-options">
                 <ul>
@@ -46,10 +48,69 @@
                     <li>Alkohole</li>
                 </ul>
             </div>
+            <div class="meals">
+                <ul class="przystawki active">
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Śledź w śmietanie</div>
+                            <div class="meal-elements"></div>
+                        </div>
+                        <div class="price">8 zł</div>
+                    </li>
+
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">carpaccio wołowe</div>
+                            <div class="meal-elements">rukola, kapary, parmezan</div>
+                        </div>
+                        <div class="price">14 zł</div>
+                    </li>
+
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Tatar wołowy
+                            </div>
+                            <div class="meal-elements">marynowany borowik, jajko,
+                                ogórek
+                                konserwowy,
+                                cebula
+                            </div>
+                        </div>
+                        <div class="price">15 zł</div>
+                    </li>
+                </ul>
+                <ul class="zupy">
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Rosół z kury</div>
+                            <div class="meal-elements">makaron, marchewka, pietruszka</div>
+                        </div>
+                        <div class="price">10 zł</div>
+                    </li>
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Żurek</div>
+                            <div class="meal-elements">jajko, biała kiełbasa</div>
+                        </div>
+                        <div class="price">10 zł</div>
+                    </li>
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Krem z pomidorów</div>
+                            <div class="meal-elements">śmietana, grzanki, parmezan</div>
+                        </div>
+                        <div class="price">14 zł</div>
+                    </li>
+                    <li>
+                        <div class="left-side">
+                            <div class="meal-name">Barszcz ukraiński</div>
+                            <div class="meal-elements">buraki, kapusta, biała fasola, żeberka</div>
+                        </div>
+                        <div class="price">12 zł</div>
+                    </li>
+                </ul>
+            </div>
         </section>
-
-
-
     </div>
     <footer><span>&copy; 2019 kraina-smaku.pl</span>
         <div class="arrow-up"><i class="fas fa-angle-double-up"></i></div>
