Make home arrow work

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>Znajdziesz u nas doskonale dobrane potrawy zarówno na śniadanie, jak i danie główne. Nie brakuje u
                     nas
                     także ryb, sałatek czy surówek.</p>
-                <button>MENU</button>
+                <a href="menu.html"><button>MENU</button></a>
             </div>
             <div class="offer">
                 <h2>Nasza oferta</h2>
@@ -128,6 +128,7 @@
     <script src="js/burger.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/bg_scroll.js"></script>
+    <script src="js/home_arrow.js"></script>
     <!-- <script src="js/contact_padding.js"></script> -->
 </body>
 
