--- a/menu.html
+++ b/menu.html
@@ -122,6 +122,8 @@
 
     <script src="js/burger.js"></script>
     <script src="js/menu_list.js"></script>
+    <script src="js/home_arrow.js"></script>
+
     <!-- <script src="js/contact_padding.js"></script> -->
 </body>
 
