--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
             <nav>
                 <a href="menu.html"><span>Menu</span></a>
-                <a href=""><span>Zdjęcia</span></a>
-                <a href=""><span>Kontakt</span></a>
-                <a href=""><span>O nas</span></a>
+                <a href="gallery.html"><span>Zdjęcia</span></a>
+                <a class="contactBtn"><span>Kontakt</span></a>
             </nav>
             <div class="logo"></div>
             <img src="images/logo.jpg" alt="">
@@ -79,7 +78,6 @@
             <div class="offer">
                 <h2>Nasza oferta</h2>
                 <p>Obsługujemy m.in wesela, chrzciny, urodziny czy też wszelkie imprezy okolicznościowe.</p>
-                <button>OFERTA</button>
                 <div class="border"></div>
             </div>
             <div class="open">
@@ -87,7 +85,7 @@
                 <p>Do odwiedzenia naszej restauracji zapraszamy w następujących godzinach: <strong>Poniedziałek -
                         Piątek: 10-21,
                         Sobota - Niedziela: 8-23.</strong></p>
-                <button>KONTAKT</button>
+                <button class="contactBtn">KONTAKT</button>
             </div>
         </section>
         <section class="banner-bottom">
@@ -112,7 +110,7 @@
                 <div></div>
                 <div></div>
                 <div></div>
-                <p class="more">Więcej zdjęć</p>
+                <p class="more"><a href="gallery.html">Więcej zdjęć</a></p>
             </div>
         </section>
         <!-- <div class="invite"><span>Serdecznie zapraszamy!</span></div> -->
@@ -129,6 +127,7 @@
     <script src="js/slider.js"></script>
     <script src="js/bg_scroll.js"></script>
     <script src="js/home_arrow.js"></script>
+    <script src="js/contact_scroll.js"></script>
     <!-- <script src="js/contact_padding.js"></script> -->
 </body>
 
