--- a/menu.html
+++ b/menu.html
@@ -18,10 +18,9 @@
         <div class="wrap">
             <div class="burger"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
             <nav>
-                <a href=""><span>Menu</span></a>
-                <a href=""><span>Zdjęcia</span></a>
-                <a href=""><span>Kontakt</span></a>
-                <a href=""><span>O nas</span></a>
+                <a href="gallery.html"><span>Zdjęcia</span></a>
+                <a class="contactBtn"><span>Kontakt</span></a>
+                <a href="index.html"><span>O nas</span></a>
             </nav>
             <div class="logo"></div>
             <img src="images/logo.jpg" alt="">
@@ -123,6 +122,7 @@
     <script src="js/burger.js"></script>
     <script src="js/menu_list.js"></script>
     <script src="js/home_arrow.js"></script>
+    <script src="js/contact_scroll.js"></script>
 
     <!-- <script src="js/contact_padding.js"></script> -->
 </body>
